建立儀錶板元件，並設定路由連結

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
 
 <p>{{content}}</p>
 <nav>
+  <a routerLink="/dashboard">儀錶板</a>
   <a routerLink="/heroes">英雄列表</a>
 </nav>
 <router-outlet></router-outlet>
