完成新增英雄與編輯英雄功能

--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -9,6 +9,6 @@
           <input [(ngModel)]="hero.name" placeholder="name">
       </label>
   </div>
-
+  <button type="button" (click)="save()">儲存</button>
 </div>
 <button type="button" (click)="goBack()">返回</button>
